<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_light_gray"
    tools:context=".SuccessActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="480dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/bottom_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/spacing_md"
                android:paddingTop="@dimen/spacing_xl"
                android:paddingEnd="@dimen/spacing_md">

                <!-- Success icon -->
                <TextView
                    android:layout_width="@dimen/icon_badge_size"
                    android:layout_height="@dimen/icon_badge_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/spacing_lg"
                    android:background="@drawable/bg_circle_success"
                    android:gravity="center"
                    android:text="✓"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_xl"
                    android:textStyle="bold" />

                <!-- Title -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/success_title"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_lg"
                    android:textStyle="bold" />

                <!-- Subtitle -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:layout_marginBottom="@dimen/spacing_lg"
                    android:text="@string/success_subtitle"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_sm" />

                <!-- Reference card -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_amount_field"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_lg">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/success_reference_label"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_sm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/success_reference_value"
                        android:textColor="@color/text_dark"
                        android:textSize="@dimen/text_sm"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- Bottom actions: share receipt + done -->
        <LinearLayout
            android:id="@+id/bottom_actions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginEnd="@dimen/spacing_md"
            android:layout_marginBottom="@dimen/spacing_xl"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:background="@drawable/bg_button_outline"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/success_button_share"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_md"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/bg_button_pill"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/success_button_done"
                android:textColor="@color/white"
                android:textSize="@dimen/text_md"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>