<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:paddingStart="@dimen/spacing_md"
    android:paddingTop="@dimen/spacing_md"
    android:paddingEnd="@dimen/spacing_md">

    <LinearLayout
        android:id="@+id/headerHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_lg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btnBackHistory"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:background="@drawable/bg_circle_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/backward_navigation"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_lg"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_weight="1"
            android:text="@string/history_title"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_lg"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvHistoryEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_empty"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_sm"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/headerHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headerHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
