<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <TextView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/icon_badge_size"
        android:layout_height="@dimen/icon_badge_size"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_bank"
        android:padding="14dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_bank"
        app:tint="@color/text_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/login_title"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_xl"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/login_subtitle"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_sm"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_marginStart="@dimen/spacing_lg"
        android:text="@string/login_email_label"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_sm"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginStart="@dimen/spacing_lg"
        android:layout_marginEnd="@dimen/spacing_lg"
        android:background="@drawable/bg_input_field"
        android:paddingStart="@dimen/spacing_md"
        android:paddingEnd="@dimen/spacing_md"
        android:hint="dinukanonis@gmail.com"
        android:textColor="@color/text_dark"
        android:textColorHint="@color/text_gray_light"
        android:textSize="@dimen/text_md"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>